# pr_reviews_scorecard

./: .gitignore  CLAUDE.md  architecture_design_record.md  deployment.md  pyproject.toml  readme.md
identity_service/: __init__.py  config.py  identity.py  store.py
langfuse_test/: test.py
src/: config.py  utils.py
src/api/: github_client.py  rest.py
src/core/: comment_printer.py  comment_processor.py
src/db/: api_keys.py  fetch_state.py
src/services/: llm_service.py  pr_service.py  scheduler.py
src/ui/: app.py  user_identity.py
